--- a/wp-content/themes/atate/scss/components/_intro-block.scss
+++ b/wp-content/themes/atate/scss/components/_intro-block.scss
@@ -4,9 +4,16 @@
   background-repeat: no-repeat;
   text-align: center;
   color: #FFFFFF;
+  height: 100vh;
+  display: flex;
+  position: relative;
 
   &__inner {
-    padding: 215px 0;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 
     h1 {
       padding: 0 0 30px 0;
